@@ -1,4 +1,5 @@
 0.2.2
+- Fixed opening via dialog crashes IntelliJ (mac) (#issue 22)
 
 0.2.1 (2019-08-22)
 - Minor GUI improvements
